tests/expectations/compiler/function/self_recursive_cycle_fail.out
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:14:20
     |
  14 |             return foo(n - 1u8) + foo(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:14:35
     |
  14 |             return foo(n - 1u8) + foo(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:5:16
     |
   5 |         return fib(n - 1u8) + fib(n - 2u8);
     |                ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:5:31
     |
   5 |         return fib(n - 1u8) + fib(n - 2u8);
     |                               ^^^^^^^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/foo` --> `test.aleo/foo`
